[gd_scene load_steps=7 format=3 uid="uid://dh88rujqyoe8i"]

[ext_resource type="Script" path="res://Scenes/entities/enemies/enemy_1.gd" id="1_q8hfi"]
[ext_resource type="Texture2D" uid="uid://cyqkd2q03chy2" path="res://icon.svg" id="2_fqddo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yvfb1"]
radius = 13.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lcoyw"]
radius = 19.0
height = 38.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2enkg"]
radius = 16.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2rlxu"]
radius = 50.01

[node name="Enemy1" type="RigidBody2D"]
position = Vector2(51, 30)
collision_layer = 2
collision_mask = 28
script = ExtResource("1_q8hfi")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, 19)
scale = Vector2(0.226563, 0.226563)
texture = ExtResource("2_fqddo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 19)
shape = SubResource("CapsuleShape2D_yvfb1")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 19)
shape = SubResource("CapsuleShape2D_lcoyw")

[node name="hurtbox" type="Area2D" parent="."]
visible = false
modulate = Color(1, 0, 0.0156863, 1)
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, 19)
shape = SubResource("CapsuleShape2D_2enkg")

[node name="atkCD" type="Timer" parent="."]

[node name="enemy_vision" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_vision"]
position = Vector2(-1, 18)
shape = SubResource("CircleShape2D_2rlxu")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="atkCD" to="." method="_on_atk_cd_timeout"]
[connection signal="body_entered" from="enemy_vision" to="." method="_on_enemy_vision_body_entered"]
[connection signal="body_exited" from="enemy_vision" to="." method="_on_enemy_vision_body_exited"]
